# ChipSynth

./: .gitignore  README.md
hardware/ChipSynth/: ChipSynth.dcm  ChipSynth.sch  SoundChips.dcm  sym-lib-table
teensy_prot/saa_teensy/: SAA1099.h  saa_teensy.ino
teensy_test/SAATeensyTest/: MCU.c  MCU.h  SAATeensyTest.atsln  SAATeensyTest.componentinfo.xml  SAATeensyTest.cproj  main.c
tools/SerialChipScript/: CMakeLists.txt
tools/SerialChipScript/include/: SerialPort.h
tools/SerialChipScript/src/: SerialChipScriptApp.cpp
